# SoundyBoardy

./: meson.build  pulse_setup.sh
src/: Filter.cpp  Filter.hpp  SoundUnit.cpp  SoundUnit.hpp  main.cpp
